added logout functionality

--- a/src/app/modules/authentication/components/google-redirect-handler/google-redirect-handler.html
+++ b/src/app/modules/authentication/components/google-redirect-handler/google-redirect-handler.html
@@ -1,2 +1,3 @@
 Redirect Da vidish
-<button (click)="hitProfileOnServer()">hit profile</button>
+<button (click)="logout()">Logout</button>
+<button (click)="hitProfileOnServer()">Get Profile</button>
