login/logout functionality working, added userDataService, userModel and shared authentication service

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="header-container">
 
-    <button type="button" (click)="printCookie()" class="btn btn-danger">Login</button>
+    <button type="button" *ngIf="!isUserLoggedIn" [routerLink]="'/auth/login'" class="btn btn-danger">Login</button>
+    <button type="button" *ngIf="isUserLoggedIn" (click)="logoutUser()" class="btn btn-danger">Logout</button>
 
 </div>
