--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <header-component></header-component>
-<router-outlet></router-outlet>
+<div class="app-container">
+    <router-outlet></router-outlet>
+</div>
