--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -2,6 +2,7 @@
     padding: 0 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     background-color: black;
     opacity: 0.8;
     color: white;
