refactor and some comments added

--- a/src/app/modules/home/components/home.component.scss
+++ b/src/app/modules/home/components/home.component.scss
@@ -1,5 +1,5 @@
 .background {
-    background: url("../../../assets/images/bg-masthead.jpg") no-repeat;
+    background: url("../../../../assets/images/bg-masthead.jpg") no-repeat;
     background-size: cover;
     min-height: 100vh;
     display: block;
